Implemented Quicksort. Also fixed issues with the pickerview.
Implemented Quicksort. Also fixed issues with the pickerview.

--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="dgO-lS-hRT">
             <objects>
                 <navigationController storyboardIdentifier="InitialController" id="WRs-B5-sAy" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="IZr-ro-ook">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IZr-ro-ook">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -428,7 +428,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nXy-o5-mQ9">
-                                <rect key="frame" x="0.0" y="64" width="414" height="572"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="472"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReuseID" id="3C9-fR-G9Q">
@@ -440,26 +440,44 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6m8-fa-dk8" id="Rc1-w2-9ux"/>
+                                    <outlet property="delegate" destination="6m8-fa-dk8" id="FXJ-w7-wKX"/>
+                                </connections>
                             </tableView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2Y-mJ-575">
+                                <rect key="frame" x="0.0" y="536" width="414" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="WO3-jA-b9u"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="6m8-fa-dk8" id="a3N-2t-GTy"/>
+                                    <outlet property="delegate" destination="6m8-fa-dk8" id="Lkh-pV-g85"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="1ih-eY-vkD" firstAttribute="top" secondItem="nHa-Ow-t5f" secondAttribute="bottom" id="1X4-bP-FWu"/>
+                            <constraint firstItem="k2Y-mJ-575" firstAttribute="top" secondItem="nXy-o5-mQ9" secondAttribute="bottom" id="1kz-rg-mNO"/>
                             <constraint firstAttribute="trailing" secondItem="nHa-Ow-t5f" secondAttribute="trailing" id="8m2-R9-Tk4"/>
                             <constraint firstItem="nXy-o5-mQ9" firstAttribute="top" secondItem="09a-eZ-5Qg" secondAttribute="bottom" id="AS9-Yl-oco"/>
+                            <constraint firstItem="nHa-Ow-t5f" firstAttribute="top" secondItem="k2Y-mJ-575" secondAttribute="bottom" id="DjY-TK-6JL"/>
                             <constraint firstItem="nHa-Ow-t5f" firstAttribute="leading" secondItem="ZDa-s2-RGc" secondAttribute="leading" id="T8n-Zu-yzv"/>
-                            <constraint firstItem="nHa-Ow-t5f" firstAttribute="top" secondItem="nXy-o5-mQ9" secondAttribute="bottom" id="cYZ-U1-AiE"/>
+                            <constraint firstItem="k2Y-mJ-575" firstAttribute="leading" secondItem="ZDa-s2-RGc" secondAttribute="leading" id="Ye3-wd-b4m"/>
+                            <constraint firstAttribute="trailing" secondItem="k2Y-mJ-575" secondAttribute="trailing" id="gG8-0N-3aU"/>
                             <constraint firstAttribute="trailing" secondItem="nXy-o5-mQ9" secondAttribute="trailing" id="wxZ-sE-ew9"/>
                             <constraint firstItem="nXy-o5-mQ9" firstAttribute="leading" secondItem="ZDa-s2-RGc" secondAttribute="leading" id="zER-de-NcM"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="pickerView" destination="k2Y-mJ-575" id="JWC-BD-bQ5"/>
                         <outlet property="tableView" destination="nXy-o5-mQ9" id="eK0-ue-czS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GGa-tq-Uob" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1989.5999999999999" y="79.610194902548727"/>
+            <point key="canvasLocation" x="1988.4057971014495" y="79.076086956521749"/>
         </scene>
         <!--Authentication View Controller-->
         <scene sceneID="TV0-0i-Ssk">
