--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A362a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <navigationController storyboardIdentifier="InitialController" id="WRs-B5-sAy" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="IZr-ro-ook">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -418,12 +418,18 @@
                                             <action selector="sortButtonTapped:" destination="6m8-fa-dk8" eventType="touchDown" id="jAg-KP-u6o"/>
                                         </connections>
                                     </button>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="xhx-PQ-sr9">
+                                        <rect key="frame" x="189" y="32" width="37" height="37"/>
+                                        <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="bpA-5q-zzD" secondAttribute="trailing" id="3a4-rT-1kh"/>
                                     <constraint firstItem="bpA-5q-zzD" firstAttribute="leading" secondItem="nHa-Ow-t5f" secondAttribute="leading" id="9gZ-rH-B8S"/>
+                                    <constraint firstItem="xhx-PQ-sr9" firstAttribute="centerX" secondItem="nHa-Ow-t5f" secondAttribute="centerX" id="LJ3-i8-8c0"/>
                                     <constraint firstItem="bpA-5q-zzD" firstAttribute="top" secondItem="nHa-Ow-t5f" secondAttribute="top" id="T9W-6J-EPd"/>
+                                    <constraint firstItem="xhx-PQ-sr9" firstAttribute="centerY" secondItem="nHa-Ow-t5f" secondAttribute="centerY" id="fAf-nL-1y3"/>
                                     <constraint firstAttribute="bottom" secondItem="bpA-5q-zzD" secondAttribute="bottom" id="sps-zm-w0L"/>
                                 </constraints>
                             </view>
@@ -471,6 +477,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="xhx-PQ-sr9" id="rCv-IZ-VDq"/>
                         <outlet property="pickerView" destination="k2Y-mJ-575" id="JWC-BD-bQ5"/>
                         <outlet property="tableView" destination="nXy-o5-mQ9" id="eK0-ue-czS"/>
                     </connections>
